--- a/my-project/index.html
+++ b/my-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="referrer" content="no-referrer"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>my-project</title>
+    <title>掌上饥荒</title>
   </head>
   <body>
     <div id="app"></div>
